# Testing-Task-Security-Code

./: .gitignore  CMakeLists.txt  README.md
include/: arg_parser.hpp  disk_info.hpp  file_scanner.hpp  run_task.hpp  system_info.hpp
src/: arg_parser.cpp  disk_info.cpp  file_scanner.cpp  main.cpp  run_task.cpp  system_info.cpp
